force-app/main/default/objects/CCRM_Account_To_Lead_Mapping__mdt/CCRM_Account_To_Lead_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>CCRM Account To Lead Mapping for Customer/Business/CLG accounts</description>
    <label>CCRM Account To Lead Mapping</label>
    <pluralLabel>CCRM Account To Lead Mappings</pluralLabel>
</CustomObject>