force-app/main/default/objects/CCRM_Account_To_Lead_Mapping__mdt/fields/Account_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Field_API_Name__c</fullName>
    <description>Account Field API Name</description>
    <label>Account Field API Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>