force-app/main/default/objects/CCRM_Account_To_Lead_Mapping__mdt/fields/Lead_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Lead_Field_API_Name__c</fullName>
    <label>Lead Field API Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>