force-app/main/default/objects/CCRM_Account_To_Lead_Mapping__mdt/fields/Source_System__c.field-meta.xml
<CustomField>
    <fullName>Source_System__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>This field is used to store source system for the mapping fields</description>
    <label>Source System</label>
    <length>100</length>
    <type>Text</type>
</CustomField>